...
                        }
                    Spacer()
                    if page == pages.last {
                        VStack {
                            Button("Start!") {
                                isShowingOpeningView = false
                            }.accessibility (identifier: "Start")
                            .buttonStyle(.bordered)
                            .onTapGesture {
                                pageIndex = pages.count  // Set the index to the last page
                            }
                        }
                    } else {
                        Button("Next", action: incrementPage)
                            .buttonStyle(.borderedProminent)
                            .accessibility (identifier: "Next")
                    }
                    Spacer()
                }
                .tag(page.tag)
...
