enum SoundOption: String {
    case Happy
    case Love
    case Shy
    case Scared
    case Surprise
    case Bored
    case Smirk
    case Funny
    case Angry
}
